@@ -59,6 +59,11 @@ $mailhost = 'localhost';
 #$mailuser = 'smtpuser';
 #$mailpasswd = 'smtppasswd';
 
+# Optional setting to set a List-Id header for all codestriker emails,
+# which can assist in filtering.  If this is not set, the header will
+# not be set.
+#$listid = 'Codestriker <codestriker.sf.net>';
+
 # Indicate whether to try and compress output if the client browser
 # supports it.  This can make a tremendous difference in bandwidth,
 # especially over slow links.
