@@ -549,6 +549,11 @@ sub doit($$$$$$$$$) {
         $smtp->datasend("In-Reply-To: $message_id\n");
     }
 
+    # Set the List-Id header if required.
+    if (defined $Codestriker::listid && $Codestriker::listid ne '') {
+        $smtp->datasend("ListId: " . $Codestriker::listid . "\n";
+    }
+
     # Make sure the subject is appropriately encoded to handle UTF-8
     # characters.
     $subject = encode_qp(encode("UTF-8", $subject), "");
